# JalaAgent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUMMARY.md  conftest.py  pyproject.toml  pyrightconfig.json  ruff.toml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: skill.md
.github/workflows/: lint.yml  release.yml  test.yml
cli/: pyproject.toml
cli/src/jala/: __init__.py  config.py  main.py  server.py  setup.py
docs/: INDEX.md  api-reference.md  architecture.md  commands.md  configuration.md  contributing-guide.md  harness.md  index.md  memory.md  package.json  providers.md  quickstart.md  roadmap.md  skills.md  user-guide.md
docs/.vitepress/: config.js
docs/guide/: authoring-skills.md  commands.md  configuration.md  providers.md  quickstart.md  skills.md
docs/reference/: architecture.md
docs/superpowers/plans/: 2026-06-19-provider-model-system-plan.md
docs/superpowers/specs/: 2026-06-19-provider-model-system-design.md
extensions/browser/src/browser_automation/: tool.py
extensions/channels/cli/: pyproject.toml
extensions/channels/cli/src/channel_cli/: __init__.py  channel.py  spinner.py
extensions/channels/telegram/: pyproject.toml  topic_manager.py
extensions/channels/telegram/src/channel_telegram/: __init__.py  channel.py  handlers.py  keyboards.py
extensions/channels/whatsapp/: pyproject.toml
extensions/channels/whatsapp/src/channel_whatsapp/: __init__.py  channel.py  handlers.py
extensions/mcp/: __init__.py  manager.py
extensions/providers/anthropic/: pyproject.toml
extensions/providers/anthropic/src/provider_anthropic/: __init__.py  provider.py
extensions/providers/anthropic/tests/: test_anthropic_provider.py
extensions/providers/deepseek/src/provider_deepseek/: provider.py
extensions/providers/gemini/src/provider_gemini/: provider.py
extensions/providers/groq/src/provider_groq/: provider.py
extensions/providers/mistral/src/provider_mistral/: provider.py
extensions/providers/ollama/: pyproject.toml
extensions/providers/ollama/src/provider_ollama/: __init__.py  provider.py
extensions/providers/ollama/tests/: test_ollama_provider.py
extensions/providers/openai/: pyproject.toml
extensions/providers/openai/src/provider_openai/: __init__.py  provider.py
extensions/providers/openai/tests/: test_openai_provider.py
extensions/providers/openrouter/: pyproject.toml
extensions/providers/openrouter/src/provider_openrouter/: __init__.py  provider.py
extensions/providers/openrouter/tests/: test_openrouter_provider.py
extensions/providers/universal/: pyproject.toml
extensions/providers/universal/src/provider_universal/: provider.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-20/: .graphify_labels.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: release.sh
tests/integration/: __init__.py  test_approval.py  test_memory_e2e.py  test_policy_pipeline.py  test_skill_loading.py
