[project]
name = "jalaagent-cli"
version = "2026.6.18"
description = "JalaAgent CLI entry point — jala command"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "jalaagent-memory-core",
    "jalaagent-skill-core",
    "jalaagent-channel-cli",
    "typer",
    "rich",
    "pyyaml>=6.0.3",
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
jala = "jala.main:main_cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jala"]
