[project]
name = "jalaagent-channel-telegram"
version = "2026.6.18"
description = "Telegram channel for JalaAgent — async bot with inline approval keyboards"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "jalaagent-memory-core",
    "python-telegram-bot[ext]>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/channel_telegram"]
