[project]
name = "jalaagent-provider-anthropic"
version = "0.1.0"
description = "Anthropic (Claude) provider for JalaAgent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "anthropic>=0.109.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_anthropic"]
