[project]
name = "jalaagent-provider-openai"
version = "2026.6.18"
description = "OpenAI-compatible provider for JalaAgent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "openai>=2.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_openai"]
