[project]
name = "jalaagent-provider-openrouter"
version = "2026.6.18"
description = "OpenRouter (unified API gateway) provider for JalaAgent"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "httpx>=0.28.1",
    "openai>=2.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_openrouter"]
