[project]
name = "jalaagent-provider-universal"
version = "2026.6.18"
description = "Universal OpenAI-compatible provider — covers 16+ APIs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "jalaagent-agent-core",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_universal"]
